# CoreBuilder

./: ._KivyBuilder  .gitignore  .gitmodules  .venv  Package.swift  create_package.sh  projectSpec.py  restructure.sh
.github/workflows/: build_components.yml  build_components_uv.yml  builder.yml  builderV3.yml  builderV4  builderV4.yml  local_builder.yml  make_releases.yml  new_builder.yml  releaseMoreRecipes.yml  release_components.yml
.github/workflows/old/: builder.yml  make_releases.yml  releaseMoreRecipes.yml  release_components.yml
KivyBuilder/: ._.build  ._.swiftpm  ._Package.swift  Package.resolved  Package.swift
KivyBuilder/.swiftpm/: ._xcode
KivyBuilder/.swiftpm/xcode/: ._package.xcworkspace  ._xcshareddata  ._xcuserdata
KivyLauncher/: KivyLauncher.swift
builder/: build.py  generate_all.py  pyproject.toml
package_templates/: ImageCore.swift  ImageCore.yml  KivyCore.swift  KivyCore.yml  KivyExtra.swift  KivyNumpy.swift  KivyNumpy.yml  KivyPythonCore.yml  SDL2Core.swift  kivyextra.yml  kivyextra_spec.yml  libjpeg.yml  libpng.yml  module.modulemap  sdl2core.yml
package_templates/KivyCore/: Package.swift
package_templates/KivyPythonCore/: Package.swift
package_templates/PythonLibrary/: PythonLibrary.swift
package_templates/_KivyExtra/: Package.swift
package_templates/cores/: ImageCore.swift  KivyCore.swift  PythonCore.swift  SDL2Core.swift
package_templates/yamls/: ImageCore.yml  KivyNumpy.yml
plists/: numpy.plist  plist_mod-1.ipynb  python.plist  python311.plist  python312.plist
tools/: create_package.sh  restructure.sh
(+27 files in other folders)
